--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-loader-spinner": "^8.0.2"
+    "react-loader-spinner": "^8.0.2",
+    "react-paginate": "^8.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
