--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-loader-spinner": "^8.0.2",
-    "react-paginate": "^8.3.0"
+    "react-paginate": "^8.3.0",
+    "use-debounce": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
