--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "19.2.3",
     "react-loader-spinner": "^8.0.2",
     "react-paginate": "^8.3.0",
+    "react-select": "^5.10.2",
     "use-debounce": "^10.1.0"
   },
   "devDependencies": {
