--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.20",
     "axios": "^1.13.2",
+    "clsx": "^2.1.1",
     "cookie": "^1.1.1",
     "next": "16.1.4",
     "react": "19.2.3",
